<resources>
    <string name="app_name">Gelde</string>

    <!--MAIN-->
    <string name="main_welcome">Welcome to Gelde!</string>

    <!--AUTH-->
    <!--Greetings-->
    <string name="login_greetings">Welcome back!</string>
    <string name="signup_greetings">Welcome! Register to get started</string>

    <!--Fields-->
    <string name="email_field">Email</string>
    <string name="password_field">Password</string>
    <string name="confirm_password_field">Confirm Password</string>

    <!--Clickies-->
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Log in</string>
    <string name="signup">Register</string>
    <string name="signup_redirect">Don\'t have an account?</string>
    <string name="login_redirect">Already have an account?</string>

    <!--Home-->
    <string name="tab_home">Home</string>

    <!--Entry-->
    <string name="tab_entry">Add Entry</string>
    <string name="entry_greeting">Add a new entry</string>
    <string name="title_field">Entry Title</string>
    <string name="amount_field">Amount (₱)</string>
    <string name="toggle_on">IN</string>
    <string name="toggle_off">OUT</string>

    <!--Account-->
    <string name="tab_account">Account</string>
    <string name="email_label">Your Email:</string>
    <string name="wallets">Wallets</string>
    <string name="add_wallet">Add Wallet</string>
    <string name="log_out">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_main">MainActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>