<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="dev.gyoaloba.gelde.main.home.HomeFragment"
        android:label="@string/tab_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_entry"
        android:name="dev.gyoaloba.gelde.main.entry.EntryFragment"
        android:label="@string/tab_entry"
        tools:layout="@layout/fragment_entry" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="dev.gyoaloba.gelde.main.account.AccountFragment"
        android:label="@string/tab_account"
        tools:layout="@layout/fragment_account" />
</navigation>