<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.account.AccountFragment"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/primary"
        android:padding="20dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/semi_large_text"
                android:text="@string/tab_account"
                android:textColor="@color/on_primary"
                android:textFontWeight="900"/>

            <LinearLayout
                android:id="@+id/logout_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:clickable="true"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_out"
                    android:textColor="@color/on_primary"
                    android:textSize="@dimen/normal_text"
                    android:layout_marginEnd="5sp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logout_icon"
                    android:background="@color/primary" />

            </LinearLayout>

        </LinearLayout>


        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_label"
            android:textColor="@color/on_primary"
            android:textSize="@dimen/normal_text"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/on_primary"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeMaxTextSize="@dimen/large_text"
            app:autoSizeStepGranularity="2sp"
            android:text="Hello World!"
            android:textSize="@dimen/large_text"/>

    </LinearLayout>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:backgroundTint="@color/surface_variant">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/surface"
        android:padding="20dp"
        android:backgroundTint="@color/surface_variant">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/normal_text"
                android:textFontWeight="800"
                android:text="@string/wallets"
                android:textColor="@color/on_surface" />

            <TextView
                android:id="@+id/add_wallet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_wallet"
                android:textColor="@color/on_surface"
                android:textSize="@dimen/normal_text"
                android:layout_marginEnd="5sp"/>


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/wallet_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:nestedScrollingEnabled="false" />


    </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>